# rustygetdata

./: Cargo.toml  README.md  build.rs
src/: getdata.rs  getdata_bindings.rs  lib.rs
test_code/: main.rs
